chore(rearch): environment prep READY — dual-JDK toolchain verified (t7)
Audit of the actual POMs found the main build already on Java 27 and the native
build on GraalVM 25; the recon-recorded 'Java 26 EA' was stale and is corrected
in project-profile.yaml. Neither version is changed by this rearchitecture.

GraalVM 27 EA is not published to SDKMAN, so the main build uses OpenJDK
27-ea+32. Both POMs compile clean at 157 source files.

The JAVA_HOME activation requirement is routed to backend, tester, devops,
architect, and teamlead inboxes — the default active JDK cannot compile pom.xml.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>
Copilot-Session: 4d9cc200-d502-4a61-9684-d4ebcd9a7079